--- a/public/css/grayscale.css
+++ b/public/css/grayscale.css
@@ -212,7 +212,7 @@
   }
   
   .intro .intro-body .intro-text {
-  font-size: 26px;
+  font-size: 36px;
   }
   
   }
@@ -541,11 +541,12 @@ width:77px;
 }
 .img_position
 {
-margin-top:10px;
+margin-top:0px;
 }
   .box1
   {
-  background-color:#a6cd93;border-radius:20px;padding:70px 5px 20px;color:#FFF;width:100%;height:auto;min-height:260px;
+  border-radius:20px;padding:70px 5px 20px;color:#000;width:100%;height:auto;min-height:260px;
+  font-weight:600;
   }
   .box2
   {
@@ -1365,7 +1366,7 @@ width:40px!important;
 }
 .img_position
 {
-margin-top:0px!important;
+margin-top:20px!important;
 }
 
 }
