Somu madam : Design changes

--- a/templates/home.html
+++ b/templates/home.html
@@ -4,7 +4,7 @@ $(window).scroll(function() {
 if ($(".navbar").offset().top > 50) {
     $(".navbar-fixed-top").addClass("top-nav-collapse");
 } else {
-    $(".navbar-fixed-top").removeClass("top-nav-collapse"); 
+    $(".navbar-fixed-top").removeClass("top-nav-collapse");
 }
 });
 
@@ -51,10 +51,11 @@ input {
 .blue_space
 {
   background-color:#0CF;padding:30px 0px;
+  margin:0 auto;
 }
 td
 {
-  font-size:16px;
+  font-size:14px;
   padding:5px;
   vertical-align:top;
 }
@@ -134,12 +135,12 @@ font-family: Abel!important;
 {
 margin-left:0px!important;
 }
-
- </style> 
+}
+</style> 
  <section>
    <div class="blue_space">
+       <div class="container">
     <div class="row">   
-    <div class="container">
      <div class="col-lg-12 text-center">
 
 <div style="text-transform:none;font-size:30px;font-family: Abel!important;padding-bottom:20px;" class="white">
@@ -153,8 +154,8 @@ HaveItAll is like a dating app for employment.</div>
 </section>
  <section>
  <div style="background-color:#FFF;">
+    <div class="container">
   <div class="row">
-   <div class="container">
  <div class="col-lg-12 text-center">
     <div align="center"><img src="public/images/img7.jpg" class="img-responsive"></div>
     <div style="padding-bottom:30px;">
@@ -165,12 +166,12 @@ HaveItAll is like a dating app for employment.</div>
     </div>
     </div>
     </div>
-    </div>
+ 
     </section>
   <section>
 <div class="blue_space">
- <div class="row">
   <div class="container">
+ <div class="row">
  <div class="col-md-6">
  <div align="center"><h2 style="color:#FFF;margin-top:20px;">How it works</h2></div>
  <div class="table_space">
@@ -386,7 +387,7 @@ HaveItAll is like a dating app for employment.</div>
         </div>
             
          </div>
-        </div>
+    
         <div class="row" style="padding-bottom:100px;" id="seniority" ng-show="showSeniority">
         
   <div class="col-lg-12"><h2 align="center" style="margin-bottom: 8px;">Experience Level</h2></div>
