--- a/public/css/grayscale.css
+++ b/public/css/grayscale.css
@@ -15,6 +15,7 @@
   html {
   width: 100%;
   height: 100%;
+ margin:auto;
   }
   
   h1,
@@ -212,7 +213,7 @@
   }
   
   .intro .intro-body .intro-text {
-  font-size: 36px;
+  font-size:24px;
   }
   
   }
@@ -1366,7 +1367,7 @@ width:40px!important;
 }
 .img_position
 {
-margin-top:20px!important;
+margin-top:0px!important;
 }
 
 }
