--- a/templates/profile.html
+++ b/templates/profile.html
@@ -38,10 +38,23 @@ Description:  Profile page
 <div style="background-color:#edebeb; font-size: 14px;"> 
   <section class="container content-section text-left">
     <div class="row">
-      <div class="alert alert-danger alert-dismissable text-center" ng-if="ProfileInfo.users_type == '1' && to_view_type != 'view' && percentage != '100' " >
-    <a class="close" data-dismiss="alert" aria-label="close">×</a>
-    <strong>Warning!</strong> You have completed <strong><i>{{percentage}}%</i></strong> of your profile  
-  </div>
+      <div class="alert alert-danger alert-dismissable" ng-if="ProfileInfo.users_type == '1' && to_view_type != 'view' && percentage != '100' " >
+        <a class="close" data-dismiss="alert" aria-label="close">×</a>
+        <div class="col-md-6 col-md-offset-3" >
+          <strong>Warning!</strong> You have completed <strong><i>{{percentage}}%</i></strong> of your profile 
+
+          <div>{{warn_message.profilepic}}</div> 
+          <div>{{warn_message.current_title}}</div> 
+          <div>{{warn_message.bio}}</div> 
+          <div>{{warn_message.location}}</div> 
+          <div>{{warn_message.employment}}</div> 
+          <div>{{warn_message.industry}}</div> 
+          <div>{{warn_message.education}}</div> 
+          <div>{{warn_message.gallery}}</div>
+          <div>{{warn_message.fits}}</div> 
+        </div>
+        <div style="clear: both;"></div>
+      </div>
     </div>
   </section>
 <div  md-swipe-left="onSwipeLeft()" md-swipe-right="onSwipeRight()">
