--- a/templates/profile.html
+++ b/templates/profile.html
@@ -39,7 +39,7 @@ Description:  Profile page
   <section class="container content-section text-left">
     <div class="row">
       <div class="alert alert-danger alert-dismissable" ng-if="ProfileInfo.users_type == '1' && to_view_type != 'view' && percentage != '100' " >
-        <a class="close" data-dismiss="alert" aria-label="close">×</a>
+        <a class="close" data-dismiss="alert" aria-label="close">X</a>
         <div class="col-md-6 col-md-offset-3" >
           <strong>Warning!</strong> You have completed <strong><i>{{percentage}}%</i></strong> of your profile 
 
