--- a/templates/gallery.html
+++ b/templates/gallery.html
@@ -35,7 +35,7 @@ Description:  Gallery page
 } 
 </style>
 <section class="container content-section text-center">
-  <h3 align="center">Manage Gallery</h3>
+  <h3 align="center">Manage Gallery <a href="#!/user/profile//" style="color:##008cc9;float: right;font-size: 12px;">Back</a></h3>
   <div class="row">
     <div  class="voca">
       <div align="center">
