Som madam : Design

--- a/include/footer_home.html
+++ b/include/footer_home.html
@@ -1,35 +1,38 @@
-   <!-- Footer -->
-   <style>
-   footer
-   {
-	   background-color:#000!important;
-	   color:#fff!important;
-   }
-   .navbar-custom.top-nav-collapse {
-    padding: 0px;
-    background: #fff!important;
-   }
-   .right1
-   {
-	   margin-right:30px;
-   }
-   @media only screen and (min-device-width:320px) and (max-device-width:767px)
+<!-- Footer -->
+<style>
+footer
 {
-	   .right1
-   {
-	   margin-right:25px!important;
-   }
-	
+background-color:#000!important;
+color:#fff!important;
 }
-   </style>
-    <div>
+.navbar-custom.top-nav-collapse {
+padding: 0px;
+background: #fff!important;
+}
+.right1
+{
+margin-right:30px!important;
+}
+
+@media only screen and (min-device-width:320px) and (max-device-width:767px)
+{
+.right1
+{
+margin-right:18px!important;
+}
+
+}
+</style>
+
+    
     <footer>
-        <div class="container text-center">
+        <div class="row">
+        <div class="container" >
+                <div class="text-center">
             HaveItAll inc. www.haveitall.ca
         </div>
-        <div class="row">
-        <div class="container" style="padding-top:20px;">
- <div class="col-lg-12 text-center">
+
+ <div class="col-lg-12 text-center" style="padding-top:20px;">
   
 <img src="public/images/8facebook.png" height="40" class="right1">
 <img src="public/images/8twitter.png" height="40" class="right1">
@@ -40,7 +43,5 @@
  </div>
  </div>
  </div>
-    </footer>
-    </div>
-	</div>
-	
+ </footer>
+ 
