--- a/include/header_home.html
+++ b/include/header_home.html
@@ -5,10 +5,10 @@
        
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-main-collapse">
-                    <img src="public/images/burger1.png">
+                    <img src="public/images/burger_new.png">
                 </button>
                 <a class="navbar-brand page-scroll logo_space" href="#page-top">
-                   <img src="public/images/logonew.png" height="70">
+                  <div style="margin-top:5px;"> <img src="public/images/logonew.png" height="60"></div>
                 </a>
             </div>
 
@@ -31,7 +31,7 @@
     
         <!-- /.container -->
     </nav>
-
+</div>
     <!-- Intro Header -->
     <header class="intro" style="margin-top:80px;">
         <div class="intro-body">
@@ -49,7 +49,7 @@ Follow to gain private exposure. Jobs are posted to your curated bulletin.
                             </p>
                             <div style="margin-top:30px;">
                             <a href="#fit" du-smooth-scroll du-scrollspy offset="30">
- <div class="btn btn-default btn-lg blue_botton" style="color:#fff!important;">Find your future employer - it's free</div>
+ <div class="btn btn-default blue_botton font_bot" style="color:#fff!important;">Find your future employer - it's free</div>
                             </a>
                             </div>
                     </div>
