--- a/templates/home.html
+++ b/templates/home.html
@@ -108,7 +108,7 @@ margin-top:-5px;
 }
 h1, h2
 {
-font-family: Abel!important;
+font-family: Arimo!important;
 
 }
 .white_bot
@@ -119,13 +119,21 @@ font-family: Abel!important;
 {
 	min-height:200px;
 }
+.font_bot
+{
+	font-size:24px;
+	}
 @media only screen and (min-device-width:768px) and (max-device-width:1024px) and
 (orientation:landscape) {	
 .table_space
 {
 	min-height:250px!important;
 }
-	
+.font_bot
+{
+font-size:24px;
+}
+
 }
 
 
@@ -134,6 +142,18 @@ font-family: Abel!important;
 .logo_space
 {
 margin-left:0px!important;
+}
+.font_bot
+{
+font-size:14px!important;
+}
+.intro .intro-body .brand-heading
+{
+	font-size:24px;
+}
+.intro
+{
+	padding:200px 0px 100px!important;
 }
 }
 </style> 
@@ -339,7 +359,7 @@ HaveItAll is like a dating app for employment.</div>
         </div>
          
         </div>
-         <div class="row" style="padding-bottom:100px;" id="industry" ng-show="showIndustry">
+         <div class="row"  ng-show="showIndustry">
         
         <div class="col-lg-12"><h2 align="center" style="margin-bottom: 8px;">Your Industry(s) </h2></div>
         <div class="col-lg-12"><h2 align="center" style="text-transform:none;">What industries do you have experience in?</h2></div>
