--- a/templates/messageCompany.html
+++ b/templates/messageCompany.html
@@ -255,7 +255,8 @@
                      <span class="chat-img pull-left" style="background-image:url(upload/{{users.users_profilepic}});width:40px;height:40px;border-radius:50%;background-position:center center;max-width:100%;-webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
-  background-size: cover;"></span>
+  background-size: cover;border: 1px solid #f1f1f1;">
+</span>
                      <div class="chat-body clearfix" >
                         <div class="header_sec">
                            <strong class="primary-font">{{users.users_firstname}} {{users.users_lastname}}</strong> <strong class="pull-right">
